app/assets/stylesheets/home.css.scss
/*----------------------------------------------------
Metro Site - CSS File
------------------------------------------------------*/

@import url(http://fonts.googleapis.com/css?family=Damion&v1);
@import url(http://fonts.googleapis.com/css?family=Arvo);
/* Global
------------------------------------------------------*/
body {
  font-family:Arial, Tahoma, Verdana;	
  font-size:12px;	
  margin:0 auto; padding:0;
  color:#9e9e9e;
  background-color:#dfdfdf;
  background-image:url(../assets/bg-body.png);
  background-repeat:repeat;
  line-height:18px;
}
* {
  margin:0;
  padding:0;
}
*:focus {
  outline:none;
}
.clr{
  clear:both
}
form{
  margin:0; padding:0;
}
hr{
  background-color:#e4e4e4;
  border-width:0;
  color:#d6d6d6;
  height:1px;
  line-height:0;
  margin:30px 0px !important;
  page-break-after:always;
  clear:both;
}

/* Default Element Styles
------------------------------------------------------*/
/* heading */
h1, h2, h3, h4, h5, h6{
  font-family: 'Arvo', Arial, Helvetica, sans-serif;
  font-smooth: always; 
  font-weight:normal;
  color:#908f8f;
}
h1{
  font-size:30px; 
  line-height:32px; 
  margin-bottom:12px;
}
h2{
  font-size:24px; 
  line-height:26px; 
  margin-bottom:12px;
}
h3{
  font-size:18px; 
  line-height:20px; 
  margin-bottom:12px;
}
h4{
  font-size:16px; 
  line-height:18px; 
  margin-bottom:12px;
}
h5{
  font-size:15px; 
  margin:0px 0px 10px 0px; 
  padding:0px; 
}
h6{
  font-size:14px; 
  margin:0px 0px 10px 0px; 
  padding:0px; 
}

/* links */
a{
  color:#a2a1a1; 
  text-decoration:underline;
}
a:visited {
  color:#a7a6a6; 
  text-decoration:none;
}
a:hover {
  color:#a7a6a6; 
  text-decoration:none;
}
a img{
  border:none
}
.imgcenter{
  margin:0 auto 8px auto;
  display:block
}
.imgleft{
  float:left; 
  display: inline;
  margin:4px 16px 10px 0px;
}
.imgright{
  float:right; 
  display: inline;
  margin:4px 0px 10px 16px;
}

/* lists, blockquotes and paragraphs */
p, ul, ol, blockquote{
  font-size:12px;
  line-height:18px;
  margin-bottom:15px;
}
ul, ol {
  margin:10px 0 35px 40px;
}
li ol,
li ul
{
  font-size:1.0em;
  list-style:square;
  margin-bottom:0;
  margin-top:0;
}
li ol {list-style:decimal;}

/* Pullquotes */
.pullquote_right,.pullquote_left{
  color:#9c9c9c;
  float:right;
  font-size:1.2em;
  letter-spacing:0px;
  margin-bottom:0;
  margin-top:7px;
  margin-left:20px;
  padding-left:15px;
  width:40%;
  font-weight:bold;
  font-style:italic; 
  line-height:1.4em;
  border-left:2px solid #cccccc;
}
.pullquote_left{
  border-right:2px solid #cccccc;
  border-left:none;
  float:left;
  margin-left:0px;
  margin-right:10px;
  padding-left:0;
  padding-right:15px ;
}

/* Dropcap */
.dropcap{
  float:left;
  font-size:30px;
  height:41px;
  line-height:30px;
  margin-bottom:-10px;
  margin-right:0px;
  padding-top:1px;
  text-align:center;
  width:26px;
}

/* Custom Message Styling */
.info {
  margin: 15px 0;
  color: #478BBF;
  padding: 8px 10px 8px 37px;
  background: #DCEFF5 url(../assets/info.png) 12px 9px no-repeat;
  border: 1px solid #B8E7F5;
} 
.success {
  margin: 15px 0;
  color:#3F9153;  
  padding:8px 10px 8px 37px;
  background:#D7F7DF url(../assets/success.png) 12px 9px no-repeat;
  border:1px solid #A3F7B8
}
.error {
  margin: 15px 0;
  color: #C24848;  
  padding: 8px 10px 8px 37px;
  background: #FFD6D6 url(../assets/error.png) 12px 9px no-repeat;
  border: 1px solid #FFC2C2;
} 
.warning {
  margin: 15px 0;
  color: #CF9E00;  
  padding: 8px 10px 8px 37px;
  background: #FAF2D7 url(../assets/warning.png) 12px 9px no-repeat;
  border: 1px solid #FAE8AF;
}
ul.circle{
  list-style-type:none;
  margin:0px 0px 25px 0px;
  padding:0px;
}
ul.circle li{
  background-image:url(../assets/circle.gif);
  background-repeat:no-repeat;
  background-position:0px 11px;
  padding:4px 0px 4px 18px;
  margin:0px;
  line-height:20px;
}

ul.nolistblock li{
  padding:0px 0px 0px 0px !important;
  line-height:20px;
  display:inline-block;
  margin:0px 12px 0px 0px;
  background-image:none !important;
}
li.marginoff{margin-right:0px !important;}
ol li{
  list-style:decimal;
  line-height:28px;
  list-style-position:inside;
  margin-left:-38px;
}
.clear{clear:both;}
.center{text-align:center; margin-bottom:10px;}

blockquote{
  font-style:italic;
  padding:0px 0px 10px 0px;
  margin:0px 0px 20px px;
  background-image:url(../assets/quote-small.png);
  background-repeat:no-repeat
}
blockquote p{
  margin-bottom:0px;
}

/* code */
code{
  border-left:2px solid #cccccc;
  background:#ffffff;
  padding:5px 10px;
  font-size:11px;
  display:block;
  color:#858585;
  margin-bottom:10px;
}

/* tables */
table { border-collapse: collapse; border-spacing: 0; }
table { margin: 0 0 18px 0; }
th { border-width: 1px 0; text-align: left; border-style: solid; }
td, th { padding: 4px 10px; }
th { 
  border-color: #eee; 
  background: #eee; 
  background: -moz-linear-gradient(top, white, #eee);  
  background: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#eee)); 

} 
tr.even td { background-color: #eee; }



q { font-style: italic; }
cite { font-style: italic; }
strong { font-weight: bold; font-style: normal; }
em { font-weight: normal; font-style: italic; }
del { text-decoration: line-through; }

/* --- Dropcaps --- */

span.dropcap { 
  height: 32px; 
  margin: 0 8px 0 0; 
  float: left; 
  display: block; 
  font-size: 40px; 
  line-height: 40px; 
} 


/* COLUMN
------------------------------------------------------*/
/* used for 4 column */
.col-200 { 
  display:inline-block;
  width:200px !important;
  vertical-align:top;
  padding:0px 0px 0px 0px !important;
  margin-right:27px;
}
.col-200-last { 
  display:inline-block;
  width:200px !important;
  vertical-align:top;
  padding:0px 0px 0px 0px !important;
  margin-right:0px;
}

/* used for 3 column */
.col-276 { 
  display:inline-block;
  width:276px !important;
  vertical-align:top;
  padding:0px 0px 0px 0px !important;
  margin-right:27px;
}
/* ... */

